--- a/Views/Book/Index.cshtml
+++ b/Views/Book/Index.cshtml
@@ -8,15 +8,31 @@
     <h1 class="display-4">Welcome to AA Library</h1>
     <p>A selection of our books</a>.</p>
 
-    @foreach(var book in Model)
-    {
-        <ul>
-            <li>
-                <p>@book.Title</p>
-                <img src="@Url.Content(book.CoverUrl)" alt=@book.Title />
-                <button>Borrow</button>
-            </li>
-
-        </ul>
-    }
 </div>
+     
+       
+
+    
+    <div class="container text-center"> 
+        <div class="row"> 
+        @foreach(var book in Model)
+        {
+            <div class="col-sm">
+                <div class="card">
+                <img src="@Url.Content(book.CoverUrl)" class="card-img-top" alt=@book.Title />
+                <div class="card-body">
+                    <h5 class="card-title">@book.Title</h5>
+                    <p class="card-text">Lorem Ipsum Book Description Will be here very soon</p>
+                    <a href="#" class="btn btn-primary">Borrow</a>
+                </div>
+                </div>
+
+
+
+     
+
+            </div>
+        }
+     </div>
+    </div>
+
