--- a/Views/Book/Index.cshtml
+++ b/Views/Book/Index.cshtml
@@ -9,30 +9,27 @@
     <p>A selection of our books</a>.</p>
 
 </div>
-     
-       
 
-    
-    <div class="container text-center"> 
-        <div class="row"> 
-        @foreach(var book in Model)
+
+
+
+<div class="container text-center">
+    <div class="row">
+        @foreach (var book in Model)
         {
             <div class="col-sm">
                 <div class="card">
-                <img src="@Url.Content(book.CoverUrl)" class="card-img-top" alt=@book.Title />
-                <div class="card-body">
-                    <h5 class="card-title">@book.Title</h5>
-                    <p class="card-text">Lorem Ipsum Book Description Will be here very soon</p>
-                    <a href="#" class="btn btn-primary">Borrow</a>
+                    <img src="@Url.Content(book.CoverUrl)" class="card-img-top" alt=@book.Title />
+                    <div class="card-body">
+                        <h5 class="card-title">@book.Title</h5>
+                        <p class="card-text">Lorem Ipsum Book Description Will be here very soon</p>
+                        <a asp-controller="Books" asp-action="Book" asp-route-isbn="@book.Isbn" class="btn btn-primary">More
+                            details</a>
+                    </div>
                 </div>
-                </div>
-
-
-
-     
 
             </div>
         }
-     </div>
     </div>
+</div>
 
